Fix ilvl text clipping

--- a/packages/common-ui/styles/common.less
+++ b/packages/common-ui/styles/common.less
@@ -1226,6 +1226,10 @@ table.gear-items-table, table.food-items-table {
     min-width: 100px;
   }
 
+  [col-id='ilvl'] {
+    overflow: visible;
+  }
+
   [col-id='icon'] {
     width: 23px;
     max-width: 23px;
